--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ install: gradle wrapper --gradle-version 4.2
 language: java
 jdk:
   - oraclejdk8
-script: ./gradlew build --scan -s
+script: 
+  - ./gradlew build --scan -s
+  - ./gradlew test
